--- a/src/WorkoutEntry.css
+++ b/src/WorkoutEntry.css
@@ -1,15 +1,3 @@
-
-.workoutEntry__logs {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.workoutEntry__logs > span {
-    width: 100px;
-    text-align: center;
-}
-
 .workoutEntry__input {
     margin-top: 20px;
     display: flex;
@@ -27,15 +15,27 @@
 
 .workoutEntry__input > div > input {
     width: 100px;
+    background-color: #141313;
+    border: 1px solid rgb(122, 122, 122);
+    height: 30px;
+    border-radius: 5px;
+    color: whitesmoke;
 }
 
 .workoutEntry__input > button {
     width: 100px;
+    border: 1px solid rgb(122, 122, 122);
+    color: whitesmoke;
 }
+
 
 .workoutEntry__top {
     font-size: 22px;
     font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 40px;
 }
 
 .workoutEntry__excEntry {
@@ -46,4 +46,8 @@
 
 .workoutEntry__excEntry > input {
     width: 100px;
+}
+
+.workoutEntry__dropDownIcon {
+    color: whitesmoke;
 }
