--- a/src/Header.css
+++ b/src/Header.css
@@ -2,9 +2,10 @@
     color: whitesmoke;
     height: 60px;
     background-color: #AF0303;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
 }
