--- a/src/Login.css
+++ b/src/Login.css
@@ -2,20 +2,42 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 200px;
+    padding-top: 200px;
+    background-color: #1D1E1F;
+    height: 100vh;
 }
 
 .login__form {
     display: flex;
     flex-direction: column;
     width: 300px;
-    height: 200px;
+    height: 280px;
     justify-content: space-between;
 }
 
+.login__header > h1 {
+    color: white;
+}
+
 .login__form > input {
+    background-color: #141313;
+    border: 1px solid lightgray;
+    border-radius: 3px;
     align-self: center;
     width: 100%;
     height: 40px;
-    margin-bottom: 20px;
+}
+
+.login__form > label {
+    color: white;
+}
+
+.login__signUpInst {
+    text-decoration: underline;
+    color: rgb(112, 112, 112);
+}
+
+.login__loginBtn {
+    background-color: #AF0303!important;
+    color: white !important;
 }
